--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -170,6 +170,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\EntryScene.cpp" />
     <ClCompile Include="..\Classes\fsm1_Machine.cpp" />
     <ClCompile Include="..\Classes\Research_Input_GamePadTest.cpp" />
+    <ClCompile Include="..\Classes\step_clickclick_game_StageView.cpp" />
     <ClCompile Include="..\Classes\step_clickclick_game_TitleScene.cpp" />
     <ClCompile Include="..\Classes\step_clickclick_animation_BasicScene.cpp" />
     <ClCompile Include="..\Classes\step_clickclick_animation_PlayNStopScene.cpp" />
@@ -237,6 +238,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\fsm1_Machine.h" />
     <ClInclude Include="..\Classes\Research_Input_GamePadTest.h" />
     <ClInclude Include="..\Classes\step_clickclick_game_Constant.h" />
+    <ClInclude Include="..\Classes\step_clickclick_game_StageView.h" />
     <ClInclude Include="..\Classes\step_clickclick_game_TitleScene.h" />
     <ClInclude Include="..\Classes\step_clickclick_animation_BasicScene.h" />
     <ClInclude Include="..\Classes\step_clickclick_animation_PlayNStopScene.h" />
