--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -270,6 +270,9 @@
     <ClCompile Include="..\Classes\step_clickclick_game_TitleScene.cpp">
       <Filter>src\scene\step_clickclick\game</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\step_clickclick_game_StageView.cpp">
+      <Filter>src\scene\step_clickclick\game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -465,6 +468,9 @@
       <Filter>src\scene\step_clickclick\game</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\step_clickclick_game_Constant.h">
+      <Filter>src\scene\step_clickclick\game</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_clickclick_game_StageView.h">
       <Filter>src\scene\step_clickclick\game</Filter>
     </ClInclude>
   </ItemGroup>
