--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -276,6 +276,9 @@
     <ClCompile Include="..\Classes\step_clickclick_game_TestScene.cpp">
       <Filter>src\scene\step_clickclick\game</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\step_clickclick_game_ResultScene.cpp">
+      <Filter>src\scene\step_clickclick\game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -477,6 +480,9 @@
       <Filter>src\scene\step_clickclick\game</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\step_clickclick_game_TestScene.h">
+      <Filter>src\scene\step_clickclick\game</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_clickclick_game_ResultScene.h">
       <Filter>src\scene\step_clickclick\game</Filter>
     </ClInclude>
   </ItemGroup>
