--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -170,6 +170,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\EntryScene.cpp" />
     <ClCompile Include="..\Classes\fsm1_Machine.cpp" />
     <ClCompile Include="..\Classes\Research_Input_GamePadTest.cpp" />
+    <ClCompile Include="..\Classes\step_clickclick_game_ExplainScene.cpp" />
     <ClCompile Include="..\Classes\step_clickclick_game_PlayScene.cpp" />
     <ClCompile Include="..\Classes\step_clickclick_game_ResultScene.cpp" />
     <ClCompile Include="..\Classes\step_clickclick_game_StageView.cpp" />
@@ -240,6 +241,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\fsm1_Machine.h" />
     <ClInclude Include="..\Classes\Research_Input_GamePadTest.h" />
     <ClInclude Include="..\Classes\step_clickclick_game_Constant.h" />
+    <ClInclude Include="..\Classes\step_clickclick_game_ExplainScene.h" />
     <ClInclude Include="..\Classes\step_clickclick_game_PlayScene.h" />
     <ClInclude Include="..\Classes\step_clickclick_game_ResultScene.h" />
     <ClInclude Include="..\Classes\step_clickclick_game_StageView.h" />
