--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -215,6 +215,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\Step99_RootScene.cpp" />
     <ClCompile Include="..\Classes\step_clickclick_RootScene.cpp" />
     <ClCompile Include="..\Classes\step_typetype_RootScene.cpp" />
+    <ClCompile Include="..\Classes\step_typetype_sprite_AnchorPointScene.cpp" />
     <ClCompile Include="..\Classes\step_typetype_sprite_TextureTypeScene.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
@@ -288,6 +289,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\Step99_RootScene.h" />
     <ClInclude Include="..\Classes\step_clickclick_RootScene.h" />
     <ClInclude Include="..\Classes\step_typetype_RootScene.h" />
+    <ClInclude Include="..\Classes\step_typetype_sprite_AnchorPointScene.h" />
     <ClInclude Include="..\Classes\step_typetype_sprite_TextureTypeScene.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
