--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -76,9 +76,6 @@
     <Filter Include="src\scene\step_clickclick\button">
       <UniqueIdentifier>{78ebed0e-5d7e-41b2-b6aa-65f57b5c0d0c}</UniqueIdentifier>
     </Filter>
-    <Filter Include="src\scene\step_clickclick\sound">
-      <UniqueIdentifier>{6acee36b-12d4-4f2b-8cbd-46abf41ed62f}</UniqueIdentifier>
-    </Filter>
     <Filter Include="src\scene\step_clickclick\game">
       <UniqueIdentifier>{652a0772-9c10-4690-b125-871cae8fc31f}</UniqueIdentifier>
     </Filter>
@@ -90,6 +87,9 @@
     </Filter>
     <Filter Include="src\scene\step_typetype\sprite">
       <UniqueIdentifier>{893084e8-aead-4aca-bcff-f00e3ce8f14e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\scene\step_typetype\sound">
+      <UniqueIdentifier>{6acee36b-12d4-4f2b-8cbd-46abf41ed62f}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -259,7 +259,7 @@
       <Filter>src\scene\step_clickclick\button</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\step_clickclick_sound_Basic.cpp">
-      <Filter>src\scene\step_clickclick\sound</Filter>
+      <Filter>src\scene\step_typetype\sound</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\step_clickclick_game_Stage.cpp">
       <Filter>src\scene\step_clickclick\game</Filter>
@@ -295,7 +295,7 @@
       <Filter>src\scene\step_typetype\sprite</Filter>
     </ClCompile>
     <ClCompile Include="..\Classes\step_typetype_sprite_AnchorPointScene.cpp">
-      <Filter>src\scene\step_typetype\input</Filter>
+      <Filter>src\scene\step_typetype\sprite</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -474,7 +474,7 @@
       <Filter>src\scene\step_clickclick\button</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\step_clickclick_sound_Basic.h">
-      <Filter>src\scene\step_clickclick\sound</Filter>
+      <Filter>src\scene\step_typetype\sound</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\step_clickclick_game_Stage.h">
       <Filter>src\scene\step_clickclick\game</Filter>
@@ -513,7 +513,7 @@
       <Filter>src\scene\step_typetype\sprite</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\step_typetype_sprite_AnchorPointScene.h">
-      <Filter>src\scene\step_typetype\input</Filter>
+      <Filter>src\scene\step_typetype\sprite</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
