--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -303,6 +303,9 @@
     <ClCompile Include="..\Classes\step_typetype_game_StageTestScene.cpp">
       <Filter>src\scene\step_typetype\game</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\step_typetype_game_Stage.cpp">
+      <Filter>src\scene\step_typetype\game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -522,6 +525,9 @@
       <Filter>src\scene\step_typetype\sound</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\step_typetype_game_StageTestScene.h">
+      <Filter>src\scene\step_typetype\game</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_typetype_game_Stage.h">
       <Filter>src\scene\step_typetype\game</Filter>
     </ClInclude>
   </ItemGroup>
