add class : Stage View

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -306,6 +306,9 @@
     <ClCompile Include="..\Classes\step_typetype_game_Stage.cpp">
       <Filter>src\scene\step_typetype\game</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\step_typetype_game_StageView.cpp">
+      <Filter>src\scene\step_typetype\game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -528,6 +531,9 @@
       <Filter>src\scene\step_typetype\game</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\step_typetype_game_Stage.h">
+      <Filter>src\scene\step_typetype\game</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\step_typetype_game_StageView.h">
       <Filter>src\scene\step_typetype\game</Filter>
     </ClInclude>
   </ItemGroup>
