--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -188,6 +188,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\step_typetype_game_Stage.cpp" />
     <ClCompile Include="..\Classes\step_typetype_game_StageTestScene.cpp" />
     <ClCompile Include="..\Classes\step_typetype_game_StageView.cpp" />
+    <ClCompile Include="..\Classes\step_typetype_game_TitleScene.cpp" />
     <ClCompile Include="..\Classes\step_typetype_sound_Basic.cpp" />
     <ClCompile Include="..\Classes\Step01_Tool_TerrainViewer.cpp" />
     <ClCompile Include="..\Classes\Step01_TextField_BasicScene.cpp" />
@@ -265,6 +266,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\step_typetype_game_Stage.h" />
     <ClInclude Include="..\Classes\step_typetype_game_StageTestScene.h" />
     <ClInclude Include="..\Classes\step_typetype_game_StageView.h" />
+    <ClInclude Include="..\Classes\step_typetype_game_TitleScene.h" />
     <ClInclude Include="..\Classes\step_typetype_sound_Basic.h" />
     <ClInclude Include="..\Classes\Step01_Tool_TerrainViewer.h" />
     <ClInclude Include="..\Classes\Step01_TextField_BasicScene.h" />
