--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -186,6 +186,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\step_clickclick_game_Stage.cpp" />
     <ClCompile Include="..\Classes\step_clickclick_game_TestScene.cpp" />
     <ClCompile Include="..\Classes\step_typetype_game_PlayScene.cpp" />
+    <ClCompile Include="..\Classes\step_typetype_game_ResultScene.cpp" />
     <ClCompile Include="..\Classes\step_typetype_game_Stage.cpp" />
     <ClCompile Include="..\Classes\step_typetype_game_StageTestScene.cpp" />
     <ClCompile Include="..\Classes\step_typetype_game_StageView.cpp" />
@@ -265,6 +266,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\step_clickclick_game_Stage.h" />
     <ClInclude Include="..\Classes\step_clickclick_game_TestScene.h" />
     <ClInclude Include="..\Classes\step_typetype_game_PlayScene.h" />
+    <ClInclude Include="..\Classes\step_typetype_game_ResultScene.h" />
     <ClInclude Include="..\Classes\step_typetype_game_Stage.h" />
     <ClInclude Include="..\Classes\step_typetype_game_StageTestScene.h" />
     <ClInclude Include="..\Classes\step_typetype_game_StageView.h" />
